--- a/index.html
+++ b/index.html
@@ -2,16 +2,62 @@
 <html lang="pt-br">
     <head>
         <title>Curriculo de Aminah Makhoul</title>
-        <meta charsrt="utf -8">
-        <style>
-            .titulo {
-                color: blue;
-                background-color: pink;
-            }
-        </style>
+        <meta charset="utf -8">
+        <link rel = "stylesheet" href="estilo.css">
     </head>
     <body>
-        <h1 class="titulo">Aminah Makhoul</h1>
+      <header>
+        <nav>
+          <ul class="menu">
+            <li>
+              <a href="#inicio" class="menu-item">Inicio</a><li>
+            <li>
+              <a href="#formacao"class="menu-item">Formação</a><li>
+            <li>
+              <a href="#projetos"class="menu-item">Projetos</a><li>
+          </ul>
+        </nav>
+       <div class="cabecalho">
+        <div>
+         <img src="marco.png" alt ="Foto de Aminah Makhoul" class = "perfil"
+         width="150" height="150" > 
+         <h1 class="titulo">Aminah Makhoul</h1>
+        <div class="redessociais">
+          <img src="github.svg" alt="Ícone do github">
+          <img src="gitlab.svg" alt="Ícone do gitlab">
+          <img src="linkedin.svg" alt="Ícone do Ícone do linkedin">
+          <img src="instagram.svg" alt="Ícone do instagram">
+        </div>
+      </div>
+      </header>    
+      <div id="formacao"class="bloco-texto"> 
+        <h2>Formação</h2>
+        <p>Mais uma noite como todas as anteriores. Pego minha caneca de café cheia, acendo meu ultimo cigarro e corro pra velha janela do quarto. Observo a noite fria e chuvosa, até parece confortável por um momento, se não fossem as dezenas de preocupações que me desmotivam a cada dia.
 
+Penso em você, mesmo sabendo o quão longe está de mim, sinto aquele amor que continua a me desgraçar intensamente a cada dia, e penso quando enfim poderei te ter comigo. Sei lá, o café chega ao fim e trago a ultima ponta, nada muda. É como se eu fosse passar por isso mais uns longos anos a frente.
+
+Cada vez mais tenho a sensação de incertezas e inseguranças e tento me manter firme apesar disso. Algumas coisas parecem dar certo e maioria não, tipo você.
+
+Então após 10 minutos refletindo, largo tudo, fecho a janela e volto pro meu mundo dentro do quarto. Não sei até quando, não sei o porquê, só sei que tá tudo tão errado e quero me livrar disso o quanto antes. E tu não tem nem ideia do quanto, amor meu.</p>
+      </div>
+      <div id="projetos"class="bloco-texto">
+        <h2>Projetos</h2>
+        <p> uma noite como todas as anteriores. Pego minha caneca de café cheia, acendo meu ultimo cigarro e corro pra velha janela do quarto. Observo a noite fria e chuvosa, até parece confortável por um momento, se não fossem as dezenas de preocupações que me desmotivam a cada dia.
+
+Penso em você, mesmo sabendo o quão longe está de mim, sinto aquele amor que continua a me desgraçar intensamente a cada dia, e penso quando enfim poderei te ter comigo. Sei lá, o café chega ao fim e trago a ultima ponta, nada muda. É como se eu fosse passar por isso mais uns longos anos a frente.
+
+Cada vez mais tenho a sensação de incertezas e inseguranças e tento me manter firme apesar disso. Algumas coisas parecem dar certo e maioria não, tipo você.
+
+Então após 10 minutos refletindo, largo tudo, fecho a janela e volto pro meu mundo dentro do quarto. Não sei até quando, não sei o porquê. </p>
+      </div>
+      </div>      
     </body>
 </html>
+    </div>
+    <div id="Galeria de Fotos"class="bloco-texto">
+      <h2>Galeria de Fotos</h2>
+          <img src="imagem1.png" alt="imagem1"class="foto1">
+          <img src="imagem2.png" alt="imagem2"class="foto2">
+          <img src="imagem3.png" alt="imagem3"class="foto3">
+
+
